Начинает разметку главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -5,19 +5,40 @@
     <title>Cat Energy</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
-  <body>
+  <body class="page">
+    <svg style="display:none">
 
-    <header>
-      <h1>Функциональное питание для котов</h1>
-    </header>
+    </svg>
+    <div class="page__wrapper">
 
-    <main>
+      <header class="page-header">
+        <div class="page-header__wrapper">
+          <a href="#" class="page-header__logo">
+            <img src="img/logo-mobile.svg" width="191" height="38" alt="Cat Energy logo">
+          </a>
+          <a href="#" class="page-header__button">Меню</a>
+        </div>
+        <nav class="main-nav">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item"><a class="site-list__link" href="#">Главная</a></li>
+            <li class="site-list__item"><a class="site-list__link" href="#">Каталог продукции</a></li>
+            <li class="site-list__item"><a class="site-list__link" href="#">Подбор программы</a></li>
+          </ul>
+        </nav>
 
-    </main>
+      </header>
 
-    <footer>
+      <main class="page-main">
+        <h1>Функциональное питание для котов</h1>
+      </main>
 
-    </footer>
+      <footer>
+
+      </footer>
+
+    </div>
+
+
 
   </body>
 </html>
