--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Cat Energy</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.min.css">
   </head>
   <body class="page">
     <svg style="display:none">
@@ -13,27 +13,135 @@
 
       <header class="page-header">
         <div class="page-header__wrapper">
-          <a href="#" class="page-header__logo">
-            <img src="img/logo-mobile.svg" width="191" height="38" alt="Cat Energy logo">
-          </a>
+          <img src="img/logo-mobile.svg" width="191" height="38" alt="Cat Energy logo">
           <a href="#" class="page-header__button">Меню</a>
         </div>
         <nav class="main-nav">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item"><a class="site-list__link" href="#">Главная</a></li>
-            <li class="site-list__item"><a class="site-list__link" href="#">Каталог продукции</a></li>
-            <li class="site-list__item"><a class="site-list__link" href="#">Подбор программы</a></li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">Подбор программы</a>
+            </li>
           </ul>
         </nav>
-
       </header>
 
       <main class="page-main">
-        <h1>Функциональное питание для котов</h1>
+
+        <section class="intro">
+          <h1 class="intro__title">Функциональное питание для котов</h1>
+          <p class="intro__tagline">Занялся собой? Займись котом!</p>
+          <img src="/img/index-can-mobile@1x.png" width="280" height="270" alt="Chicken food">
+          <a class="intro__button button" href="#">Подобрать программу</a>
+        </section>
+
+        <section class="catalog">
+          <article class="catalog__program program program--slim">
+            <h3 class="program__title">Похудение</h2>
+            <p class="program__description">
+              Ваш кот весит больше собаки и
+              почти утратил способность лазить
+              по деревьям? Пора на диету! Cat
+              Energy Slim поможет вашему
+              питомцу сбросить лишний вес.
+            </p>
+            <a class="program__link" href="#">Каталог Slim</a>
+          </article>
+          <article class="catalog__program program program--pro">
+            <h3 class="program__title">Набор массы</h2>
+            <p class="program__description">
+              Заработать авторитет среди
+              дворовых котов и даже собак?
+              Серия Cat Energy Pro поможет
+              вашему коту нарастить
+              необходимые мышцы!
+            </p>
+            <a class="program__link" href="#">Каталог Pro</a>
+          </article>
+        </section>
+
+        <section class="about">
+          <h2 class="about__title">Как это работает</h2>
+          <p class="about__feature">Функциональное питание содержит только полезные питательные вещества.</p>
+          <p class="about__feature">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          <p class="about__feature">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          <p class="about__feature">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        </section>
+
+        <section class="example">
+          <h2 class="example__title">Живой пример</h2>
+          <p class="example__description">
+            Борис сбросил 5 кг за 2 месяца, просто
+            заменив свой обычный корм на Cat
+            Energy Slim. Отличный результат без
+            изнуряющих тренировок! При этом он не
+            менял своих привычек и по-прежнему
+            спит по 16 часов в день.
+          </p>
+          <div class="example__wrapper">
+            <div class="example__metric">
+              <p>
+                5 кг
+                <span>снижение<br> веса</span>
+              </p>
+            </div>
+            <div class="example__metric">
+              <p>
+                60 дней
+                <span>затрачено<br> времени</span>
+              </p>
+            </div>
+            <p class="example__cost">Затраты на питание: 15 000 руб.</p>
+          </div>
+          <div class="example__silder">
+            <img src="" alt="Fat cat">
+            <div class="example__toggle">
+              <span>Было</span>
+              <input type="range" name="" value="">
+              <span>Стало</span>
+            </div>
+          </div>
+        </section>
+
+        <section class="contacts">
+          <h3 class="contacts__title">приглашаем к сотрудничеству дилеров!</h3>
+          <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </section>
+
+        <section class="map">
+
+        </section>
+
       </main>
 
-      <footer>
-
+      <footer class="page-footer">
+        <img class="page-footer__logo" src="" alt="Cat Energy logo">
+        <div class="page-footer__social">
+          <a class="page-footer__link" href="#">
+            VK
+            <img src="" alt="">
+          </a>
+          <a class="page-footer__link" href="#">
+            Instagram
+            <img src="" alt="">
+          </a>
+          <a class="page-footer__link" href="#">
+            Facebook
+            <img src="" alt="">
+          </a>
+        </div>
+        <div class="page-footer__copyright">
+          <p>HTML Academy</p>
+          <a href="#">
+            HTML academy
+            <img src="" alt="">
+          </a>
+        </div>
       </footer>
 
     </div>
