--- a/source/index.html
+++ b/source/index.html
@@ -67,79 +67,83 @@
 
         <section class="about">
           <h2 class="about__title">Как это работает</h2>
-          <p class="about__feature">Функциональное питание содержит только полезные питательные вещества.</p>
-          <p class="about__feature">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-          <p class="about__feature">Замените один-два приема обычной еды на наше функциональное питание.</p>
-          <p class="about__feature">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          <p class="about__feature about__feature--leaf">Функциональное питание содержит только полезные питательные вещества.</p>
+          <p class="about__feature about__feature--water">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          <p class="about__feature about__feature--dinner">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          <p class="about__feature about__feature--clock">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </section>
 
         <section class="example">
-          <h2 class="example__title">Живой пример</h2>
-          <p class="example__description">
-            Борис сбросил 5 кг за 2 месяца, просто
-            заменив свой обычный корм на Cat
-            Energy Slim. Отличный результат без
-            изнуряющих тренировок! При этом он не
-            менял своих привычек и по-прежнему
-            спит по 16 часов в день.
-          </p>
           <div class="example__wrapper">
-            <div class="example__metric">
-              <p>
-                5 кг
-                <span>снижение<br> веса</span>
-              </p>
+            <h2 class="example__title">Живой пример</h2>
+            <p class="example__description">
+              Борис сбросил 5 кг за 2 месяца, просто
+              заменив свой обычный корм на Cat
+              Energy Slim. Отличный результат без
+              изнуряющих тренировок! При этом он не
+              менял своих привычек и по-прежнему
+              спит по 16 часов в день.
+            </p>
+            <div class="example__info">
+              <div class="example__metric">
+                <p>
+                  5 кг
+                  <span>снижение<br> веса</span>
+                </p>
+              </div>
+              <div class="example__metric">
+                <p>
+                  60 дней
+                  <span>затрачено<br> времени</span>
+                </p>
+              </div>
+              <p class="example__cost">Затраты на питание: 15 000 руб.</p>
             </div>
-            <div class="example__metric">
-              <p>
-                60 дней
-                <span>затрачено<br> времени</span>
-              </p>
-            </div>
-            <p class="example__cost">Затраты на питание: 15 000 руб.</p>
           </div>
-          <div class="example__silder">
-            <img src="" alt="Fat cat">
+
+          <div class="example__slider">
+            <img src="img/example-before-mobile@1x.png" width="320" height="240" alt="Fat cat">
             <div class="example__toggle">
               <span>Было</span>
-              <input type="range" name="" value="">
+              <label>
+                <input  class="example__input" type="range" name="" value="">
+                <span></span>
+              </label>
               <span>Стало</span>
             </div>
           </div>
         </section>
 
-        <section class="contacts">
-          <h3 class="contacts__title">приглашаем к сотрудничеству дилеров!</h3>
-          <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        </section>
-
         <section class="map">
-
+          <div class="contacts">
+            <h3 class="contacts__title">приглашаем<br> к сотрудничеству дилеров!</h3>
+            <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          </div>
         </section>
 
       </main>
 
       <footer class="page-footer">
-        <img class="page-footer__logo" src="" alt="Cat Energy logo">
+        <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy logo">
         <div class="page-footer__social">
           <a class="page-footer__link" href="#">
             VK
-            <img src="" alt="">
+            <img src="img/icon-vk.svg" width="22" height="12" alt="VK">
           </a>
           <a class="page-footer__link" href="#">
             Instagram
-            <img src="" alt="">
+            <img src="img/icon-insta.svg" width="16" height="16" alt="Instagram">
           </a>
           <a class="page-footer__link" href="#">
             Facebook
-            <img src="" alt="">
+            <img src="img/icon-fb.svg" width="10" height="19" alt="Facebook">
           </a>
         </div>
         <div class="page-footer__copyright">
           <p>HTML Academy</p>
           <a href="#">
             HTML academy
-            <img src="" alt="">
+            <img src="img/logo-htmlacademy.png" width="27" height="34" alt="HTML Academy logo">
           </a>
         </div>
       </footer>
